Try fix scrollbar

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     user-select: none;
     transform: none;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
 }
 
 html, 
